# opengv

./: .gitignore  CMakeLists.txt  conanfile.py  package.xml
include/opengv/: types.hpp
include/opengv/absolute_pose/: AbsoluteAdapterBase.hpp
include/opengv/absolute_pose/modules/: main.hpp
include/opengv/absolute_pose/modules/gp3p_lee/: modules.hpp
include/opengv/math/: sturm.h
include/opengv/sac/: LoRansac.hpp  MultiSampleConsensus.hpp  Ransac.hpp  SampleConsensus.hpp  SampleConsensusProblem.hpp  sprt.hpp
include/opengv/sac/implementation/: LoRansac.hpp  MultiSampleConsensusProblem.hpp  Ransac.hpp  SampleConsensusProblem.hpp  sprt.hpp
include/opengv/sac_problems/absolute_pose/: AbsolutePoseSacProblem.hpp
opengv/: CMakeLists.txt
opengv/include/opengv/absolute_pose/: methods.hpp
opengv/include/opengv/absolute_pose/modules/gp3p_kukelova/: modules.hpp
opengv/include/opengv/math/: polynomial.h  quaternion.hpp
opengv/include/opengv/sac/: LoRansac.hpp  MultiRansac.hpp  MultiSampleConsensus.hpp  MultiSampleConsensusProblem.hpp  Ransac.hpp  SampleConsensus.hpp  sprt.hpp
opengv/include/opengv/sac/implementation/: MultiRansac.hpp  MultiSampleConsensusProblem.hpp  SampleConsensus.hpp
opengv/include/opengv/sac_problems/absolute_pose/: AbsolutePoseSacProblem.hpp
opengv/matlab/: opengv.cpp  opengv_donotuse.cpp
opengv/src/absolute_pose/: NoncentralAbsoluteAdapter.cpp
opengv/src/absolute_pose/modules/gp3p_lee/: code.cpp
opengv/src/sac/: sprt.cpp
opengv/src/sac_problems/absolute_pose/: AbsolutePoseSacProblem.cpp
opengv/test/: test_eigensolver_sac.cpp  test_multi_noncentral_absolute_pose_sac.cpp  test_multi_noncentral_relative_pose_sac.cpp  test_noncentral_absolute_pose_sac.cpp  test_point_cloud_sac.cpp  test_relative_pose_rotationOnly_sac.cpp
src/absolute_pose/: methods.cpp
src/absolute_pose/modules/: main.cpp
src/absolute_pose/modules/gp3p_kukelova/: re3q3.cc
src/absolute_pose/modules/gp3p_lee/: code.cpp  generalized_absolute_pose_coeffs.cc
src/math/: polynomial.cc
src/relative_pose/modules/: main.cpp
src/sac/: sprt.cpp
src/sac_problems/absolute_pose/: AbsolutePoseSacProblem.cpp
test/: test_absolute_pose_sac.cpp  test_noncentral_absolute_pose_sac.cpp  test_noncentral_relative_pose_sac.cpp  test_relative_pose_sac.cpp
